Reorganizing  and documenting.  tests are passing but coverage is poor

--- a/config/testdata/preflight.yaml
+++ b/config/testdata/preflight.yaml
@@ -1,4 +1,6 @@
 verbose: True
+organization: "MyCompanyName"
+team: "DevOps"
 fileonly: "unregistered value"
 checked_environment_variables:
   - IS_AWS
