--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,20 +1,18 @@
-# https://medium.com/@williamhayes/versioning-using-bumpversion-4d13c914e9b8
-# https://blog.golang.org/publishing-go-modules
 [bumpversion]
-current_version = 0.0.0
+current_version = 0.0.0-01
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
-serialize =
-    {major}.{minor}.{patch}-{release}{build}
-    {major}.{minor}.{patch}
+serialize = 
+	{major}.{minor}.{patch}-{release}{build}
+	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = prod
 first_value = dev
-values =
-    dev
-    prod
+values = 
+	dev
+	prod
 
 [bumpversion:part:build]
 
