setting up versioning and make

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -20,8 +20,8 @@ values =
 search = version: {current_version}
 replace = {new_version}
 
-[bumpversion:file:go.mod]
-parse = (?P<major>\d+)
-serialize = {major}
-search = module github.com/myorg/myproject/v{current_version}
-replace = module github.com/myorg/myproject/v{new_version}
+; [bumpversion:file:go.mod]
+; parse = (?P<major>\d+)
+; serialize = {major}
+; search = module github.com/myorg/myproject/v{current_version}
+; replace = module github.com/myorg/myproject/v{new_version}
