--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.0.0-prod0
+current_version = 0.0.1-dev0
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
@@ -19,9 +19,3 @@ values =
 [bumpversion:file:VERSION]
 search = version: {current_version}
 replace = {new_version}
-
-; [bumpversion:file:go.mod]
-; parse = (?P<major>\d+)
-; serialize = {major}
-; search = module github.com/myorg/myproject/v{current_version}
-; replace = module github.com/myorg/myproject/v{new_version}
