--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,20 +1,12 @@
 [bumpversion]
 current_version = 0.0.6
-commit = True
-tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
-serialize = 
-	{major}.{minor}.{patch}-{release}{build}
-	{major}.{minor}.{patch}
+commit = False
+tag = False
 
-[bumpversion:part:release]
-optional_value = prod
-first_value = dev
-values = 
-	dev
-	prod
+[bumpversion:file:preflight.go]
+search = version: {current_version}
+replace = {new_version}
 
-[bumpversion:part:build]
 
 [bumpversion:file:VERSION]
 search = version: {current_version}
